# rustgression

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MANIFEST.in  README.md  SECURITY.md  compose.yml  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  DEVELOP_REQUEST.md  FEATURE_REQUEST.md
.github/workflows/: ci.yml  deploy.yml  pr-build-test.yml  publish.yml  release.yml  test-and-build.yml  test.yml
docs/: COMMIT_CONVENTIONS.md  api.md  development.md  setup_dev.md  test-dev.md
docs/adrs/: adr-000-template.md  adr-006-domain-driven-design-api.md  adr-012-github-templates-and-documentation-structure.md
docs/en/: README.md  development.md
docs/ja/: README.md  development.md
examples/: scientific_example.py  simple_example.py
regression_tools/: __init__.py
regression_tools/regression/: regressor.py
rustgression/: __init__.py
rustgression/regression/: __init__.py  _rust_imports.py  base.py  base.pyi  factory.py  factory.pyi  ols.py  ols_multi.py  tls.py  tls.pyi
scripts/: test-building.sh  test-import-operation.py  test-import.py  update-version.sh  version-check.sh  version-update.sh
scripts/lib/: version-utils.sh
scripts/libs/: version-utils.sh
src/: lib.rs  tls.rs  tls_regression.rs  warnings.rs
src-py/rustgression/: __init__.py  __init__.pyi
src-py/rustgression/regression/: __init__.py  __init__.pyi  base.py  base.pyi  ols_multi.pyi  tls.py  tls.pyi
src/regression/: mod.rs  ols.rs  ols_multi.rs  tls.rs
src/regression/utils/: math.rs  mod.rs  statistics.rs  validation.rs
storage/docs/ja/: README.md  development.md
tests/: test_base.py  test_comparison.py  test_edge_cases.py  test_error_handling.py  test_imports.py  test_ols.py  test_ols_double_validation.py  test_ols_multi.py  test_regressor.py  test_tls.py  test_tls_numerical_stability.py  test_tls_regressor.py  test_warnings.py
tests-py/e2e/: test_smoke.py
tests-py/integration/: conftest.py  test_base.py  test_comparison.py  test_edge_cases.py  test_imports.py  test_ols.py  test_ols_double_validation.py  test_tls.py  test_tls_double_validation.py  test_tls_inference.py  test_tls_intervals.py
tests-py/scripts/: test_version_scripts.py
tls_regressor/: __init__.py  tls_regression.py
