[package]
name = "rustgression"
version = "0.3.1"
edition = "2024"
authors = ["connect0459 <connect0459@gmail.com>"]
description = "Fast OLS and TLS regression using Rust backend"
readme = "README.md"
license = "MIT"

[lib]
name = "rustgression"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
numpy = "0.19"
ndarray = "0.15"
nalgebra = "0.32"

[dev-dependencies]
cargo-tarpaulin = "0.32"
