[project]
name = "tls_regressor"
version = "0.1.2"
description = "Fast Total Least Squares regression using Rust backend"
authors = [{ name = "connect0459", email = "connect0459@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.20.0"]

[project.urls]
"Homepage" = "https://github.com/connect0459/tls_regressor"
"Bug Tracker" = "https://github.com/connect0459/tls_regressor/issues"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "."                  # "tls_regressor" から "." に変更
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.uv]
managed = true
dev-dependencies = [
  "build>=1.2.2.post1",
  "hatchling>=1.25.0",
  "ipykernel>=6.29.5",
  "pdoc>=15.0.1",
  "pytest>=8.3.4",
  "python-dotenv>=1.0.1",
  "ruff>=0.6.8",
  "twine>=5.1.1",
]
