[project]
name = "rustgression"
version = "0.4.1"
description = "Fast OLS and TLS regression using Rust backend"
authors = [{ name = "connect0459", email = "connect0459@gmail.com" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = ["numpy>=1.20.0"]

# Dependencies installed with `uv sync --extra examples`
[project.optional-dependencies]
examples = ["matplotlib>=3.10.1", "scipy>=1.15.2"]

[project.urls]
"Homepage" = "https://github.com/connect0459/rustgression"
"Bug Tracker" = "https://github.com/connect0459/rustgression/issues"

[build-system]
requires = ["maturin<2.0,>=1.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
features = ["pyo3/extension-module"]
bindings = "pyo3"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
# Maximum line length
line-length = 88

# Files and directories to check
src = ["rustgression", "tests"]

# Files and directories to exclude
exclude = [".git", ".venv", "__pycache__", "build", "dist"]

# Enabled rules
[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "RUF", # ruff-specific rules
]

# Ignored rules
ignore = [
  "E501",   # line length violations
  "RUF003", # allow "KATAKANA LETTER"
]

# Rules to auto-fix
fixable = ["I", "F401", "RUF002", "RUF022", "UP006", "UP007", "UP035"]

[tool.ruff.lint.isort]
# isort configuration
known-first-party = ["rustgression"]
known-third-party = ["numpy", "pandas"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.mccabe]
# Maximum cyclomatic complexity
max-complexity = 10

[tool.ruff.lint.pydocstyle]
# Docstring convention
convention = "numpy"

[tool.uv]
managed = true

[dependency-groups]
dev = [
  "maturin==1.12.6",
  "packaging==26.0",
  "pre-commit==4.5.1",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "ruff==0.15.5",
  "setuptools==82.0.0",
  "twine==6.2.0",
]
